--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <body>
     <div style="
     width: 500px;
-    border: 1px solid black;">
+    border: 1px solid black;
+    margin: 90px auto;
+    padding: 100px;
+    border-radius :10px;
+    box-shadow:0 0 15px Gray;
+    ">
         <h1>Hai! Selamat datang</h1>
         <p>
             I am so happy to see you in this occasion. Well, my name is Desi Ilham Sianturi. I come from Lampung. I was
@@ -15,10 +20,28 @@
             Lampung. My hobby is reading, travelling, watching movie and writing. I really love book. Even, I have a
             dream to be a famous and great writer.
         </p>
-        <img style="width: 10%;"src="icon/instagram.png.png" alt="ig">
-        <img style="width: 10%;"src="icon/linkedin.png.png" alt="linkedin">
-        <img style="width: 10%;"src="icon/twitter.png.png" alt="twitter">
+        <div style="text-align:center;margin: botton 10px">
+            <img style="width: 5%;" src="icon/instagram.png.png" alt="ig">
+            <img style="width: 5%;" src="icon/linkedin.png.png" alt="linkedin">
+            <img style="width: 5%;" src="icon/twitter.png.png" alt="twitter">
+        </div>
+
+        <div style="
+        width :350px;
+        border:1px solid black; 
+        margin: 90px auto;
+        padding:10px;
+        border-radius :10px;
+        box-shadow:0 0 15px Gray
+        ">
+
+            <img style="width:100%; border-radius:10px 10px 0 0;" src="icon/profil.jpg.jpg" alt="photo profil">
+            <h2>Mukhtar Nashir</h2>
+            <p>Santri pondok pesantren KHAS kempek cirebon dan programmer kempek.</p>
+        </div>
+
     </div>
+
 
 
 
